# Plot-System-API

./: Cargo.toml  LICENSE  README.md  Rocket.toml
api/: Cargo.toml
api/src/: data_interface.rs  main.rs
migrations/: 20220205074102_auth_table.sql  20220316100224_update_shematics-path_column.sql  20220517070321_database_schema_setup.sql  20220517141108_test_data.sql
plotsystem_api/: .env  Cargo.toml
plotsystem_api/db/: plotsystem.sql
plotsystem_api/migrations/: 20220205074102_auth_table.sql
plotsystem_api/src/: lib.rs  main.rs
plotsystem_api/src/auth/: auth_access_request_guard.rs  auth_preflag_request_guard.rs  auth_put_request_guard.rs  mod.rs  request_guards.rs
plotsystem_api/src/db_get/: api_keys.rs  city_project.rs  country.rs  ftp_configuration.rs  mod.rs  plot.rs
plotsystem_api/src/entities/: api_keys.rs  mod.rs  plotsystem_plots.rs  prelude.rs  sea_orm_active_enums.rs
plotsystem_api/src/get/: server.rs
plotsystem_api/src/routes/: get.rs  post.rs  put.rs
querries/: plot_id_to_api_key.sql
src/: main.rs  pool.rs
src/auth/: auth_get_ftp_config_guard.rs  auth_post_plot_data_guard.rs  auth_preflag_request_guard.rs  auth_put_plot_request_guard.rs  mod.rs
src/db_get/: api_keys.rs  city_project.rs  country.rs  ftp_configuration.rs  mod.rs  plot.rs  server.rs
src/entities/: api_keys.rs  mod.rs  plotsystem_api_keys.rs  plotsystem_builder_is_reviewer.rs  plotsystem_builders.rs  plotsystem_buildteam_has_countries.rs  plotsystem_buildteams.rs  plotsystem_city_projects.rs  plotsystem_countries.rs  plotsystem_difficulties.rs  plotsystem_ftp_configurations.rs  plotsystem_plots.rs  prelude.rs  sea_orm_active_enums.rs
src/routes/: get.rs  post.rs  put.rs
tests/basic/: .env
tests/basic/src/: main.rs
tests/diesel_derive_enum_test/: .env  Cargo.toml
tests/diesel_derive_enum_test/migrations/2022-01-05-154027_create_table_with_enums/: down.sql  up.sql
tests/diesel_derive_enum_test/src/: models.rs  schema.rs
tests/diesel_enum_test_2/: Cargo.toml
tests/diesel_tutorial_2/: .env  Cargo.toml  diesel.toml
tests/diesel_tutorial_2/src/: lib.rs  models.rs  schema.rs  sql_types.rs
tests/old_diesel_rocket_test/src/: main.rs  (+2 more)
tests/plotsystem_db_test/: Cargo.toml
tests/sea_orm_example/: Cargo.toml
tests/sea_orm_plotsystem_tables/: .env  Cargo.toml
tests/sea_orm_rocket_integration_test/: Cargo.toml  Rocket.toml
tests/sea_orm_rocket_integration_test/src/: main.rs
tests/sea_orm_rocket_integration_test/src/entities/: plotsystem_countries.rs  plotsystem_ftp_configurations.rs  plotsystem_plots.rs  plotsystem_reviews.rs  plotsystem_servers.rs  prelude.rs
tests/sea_orm_rocket_integration_test/src/get/: city_project.rs  ftp_configuration.rs  mod.rs  server.rs
tests/sea_orm_test/: .env  Cargo.toml
tests/sea_orm_test/migrations/: 20220107193145_enum_table.sql
tests/sea_orm_test/src/: main.rs  mod.rs  mylimplies.rs  ops.rs
tests/sea_orm_test/src/entity/: prelude.rs  sea_orm_active_enums.rs
tests/sqlx_test/: Cargo.toml
(+25 files in other folders)
