[package]
name = "plotsystem_api"
version = "0.1.0"
authors = ["jo_kil"]
edition = "2021"
publish = false

[workspace]

[dependencies]
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
rocket = { version = "0.5.0-rc.1", features = [
  "json",
] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = [
  "tera",
] }
serde = "1.0.133"
serde_json = { version = "^1" }
serde_derive = "0.9"

[dependencies.sea-orm]
version = "^0.5.0"
features = ["macros", "runtime-tokio-native-tls"]
default-features = false

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[features]
default = ["sea-orm/sqlx-mysql"]
