[package]
name = "plotsystem_api"
version = "0.1.0"
authors = ["jo_kil"]
edition = "2021"
publish = false

[dependencies]
async-trait = { version = "0.1" }
rocket = { version = "0.5.0-rc.1", features = [
  "json",
] }
serde = "1.0.133"

[dependencies.sea-orm]
version = "^0.5.0"
features = ["macros", "runtime-tokio-native-tls"]
default-features = false

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"

[features]
default = ["sea-orm/sqlx-mysql"]
