[package]
name = "diesel_derive_enum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
diesel-derive-enum = { git = "https://github.com/adwhit/diesel-derive-enum", features = ["mysql"] }