[package]
name = "sea_orm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros", "debug-print"], default-features = false }
async-std = { version = "^1.9", features = [ "attributes" ] }
# futures = { version = "^0.3" }